# auth_rs

./: .gitmodules  Cargo.toml  build.rs  db.just  justfile  migrate.just
entity/: Cargo.toml
entity/src/: admin.rs  admin_api_key.rs  lib.rs  prelude.rs  provider.rs  session.rs  user.rs  user_provider.rs
migration/src/: lib.rs  m20250302_192622_create_table_user.rs  m20250303_051455_create_table_provider.rs  m20250303_051527_create_table_session.rs  m20250303_051626_create_table_user_provider.rs  m20250314_124122_admin.rs  m20250314_124135_admin_api_key.rs
src/: error.rs  lib.rs  main.rs
src/config/: env.rs  state.rs
src/database/: admin.rs  api_key.rs  mod.rs  session.rs  user.rs
src/model/: admin.rs  api.rs  mod.rs  user.rs
src/service/: admin.rs  auth.rs
src/template/email/: mod.rs
src/token/: claims.rs  error.rs  mod.rs  response.rs  service.rs  traits.rs
src/token/types/: access.rs  mod.rs  reauth.rs  refresh.rs  session.rs
src/util/: mod.rs  verify.rs
