[package]
name = "auth_rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

tonic = "*"
prost = "0.13.5"
anyhow = "1.0.96"
dotenvy = "0.15.7"
env_logger = "0.11.6"
envmode = "0.1.2"
envy = "0.4.2"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower = "0.5.2"
validator = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
once_cell = "1.20.2"
log = "0.4.22"
sea-orm = { version = "1.1.5", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
bcrypt = "0.17.0"
ulid = "1.1.4"
jsonwebtoken = "9.3.1"
redis = { version = "0.29.0", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }
base64 = "0.22.1"
cookie = "0.18.1"
ipinfo = "3.1.1"
regex = "1.11.1"
woothee = "0.13.0"
time = "0.3.37"
resend-rs = "0.12.0"
maud = "0.27.0"
rand = "0.9.0"

[build-dependencies]
tonic-build = "*"
